# preflection

./: Cargo.toml  Dockerfile.dev  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
preflect/: Cargo.toml
preflect-macros/: Cargo.toml
preflect-macros/src/: attr_utils.rs  drop.rs  errors.rs  has_field.rs  has_fields.rs  lib.rs
preflect/examples/: ignore_dynamic_field.rs  ignore_static_field.rs  partial_drop.rs  simple_dynamic_example.rs  simple_static_example.rs
preflect/src/: drop.rs  fields.rs  lib.rs
preflect/src/fields/: aot.rs  errors.rs  run_time.rs
preflection/: Cargo.toml
preflection-macros/: Cargo.toml
preflection-macros/src/: attr_utils.rs  errors.rs  has_field.rs  has_fields.rs  lib.rs
preflection/examples/: ignore_dynamic_field.rs  ignore_static_field.rs  simple_dynamic_example.rs  simple_static_example.rs
preflection/src/: fields.rs  lib.rs
preflection/src/fields/: errors.rs
