[package]
name = "preflect-macros"
version = "0.1.0"
authors = ["Timothy Flowers <t_chuck_flowers@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
attribution = { git = "https://github.com/chuck-flowers/attribution" }
proc-macro2 = "^1.0.9"
quote = "^1.0.3"
syn = { version = "^1.0.16", features = ["full"] }

[dev-dependencies]
syn = { version = "^1.0.16", features = ["full", "extra-traits"] }

[features]
has-field = []
