[package]
name = "preflect"
version = "0.1.0"
authors = ["Timothy Flowers <t_chuck_flowers@yahoo.com>"]
edition = "2018"

[dependencies]
memoffset = "0.6.1"
preflect-macros = { path = "../preflect-macros" }

[features]
partial-drop = ["preflect-macros/partial-drop"]

[[example]]
name = "simple_dynamic_example"

[[example]]
name = "simple_static_example"

[[example]]
name = "ignore_static_field"

[[example]]
name = "partial_drop"
required-features = ["partial-drop"]
