[package]
name = "preflection"
version = "0.1.0"
authors = ["Timothy Flowers <t_chuck_flowers@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
preflection-macros = { path = "../preflection-macros" }

[features]
has-field = ["preflection-macros/has-field"]

[[example]]
name = "simple_dynamic_example"

[[example]]
name = "simple_static_example"
required-features = ["has-field"]

[[example]]
name = "ignore_static_field"
required-features = ["has-field"]
